<?xml version="1.0" encoding="UTF-8"?>
<project xmlns="http://maven.apache.org/POM/4.0.0"
         xmlns:xsi="http://www.w3.org/2001/XMLSchema-instance"
         xsi:schemaLocation="http://maven.apache.org/POM/4.0.0 http://maven.apache.org/xsd/maven-4.0.0.xsd">
    <modelVersion>4.0.0</modelVersion>

    <groupId>me.jho5245</groupId>
    <artifactId>Cucumbery</artifactId>
    <packaging>jar</packaging>
    <version>1.0-dev</version>

    <properties>
        <project.build.sourceEncoding>UTF-8</project.build.sourceEncoding>
        <maven.compiler.source>21</maven.compiler.source>
        <maven.compiler.target>21</maven.compiler.target>
        <java.version>21</java.version>
    </properties>

    <repositories>
        <!-- Local Repository -->
        <repository>
            <id>localrepository</id>
            <url>file://${basedir}/lib</url>
        </repository>

        <!-- repo:wanyne-amethy -->
        <repository>
            <id>amethy</id>
            <url>https://api.wany.io/amethy/repository/maven</url>
        </repository>

        <!-- adventure snapshot Repository -->
        <repository>
            <id>sonatype-oss-snapshots1</id>
            <url>https://s01.oss.sonatype.org/content/repositories/snapshots/</url>
        </repository>

        <!-- Paper Repository -->
        <repository>
            <id>papermc</id>
            <url>https://repo.papermc.io/repository/maven-public/</url>
        </repository>

        <!-- NBTAPI Repository -->
        <repository>
            <id>codemc-repo</id>
            <url>https://repo.codemc.io/repository/maven-public/</url>
            <layout>default</layout>
        </repository>

        <!-- Mojang Brigadier Repository -->
        <repository>
            <id>minecraft-libraries</id>
            <name>Minecraft Libraries</name>
            <url>https://libraries.minecraft.net</url>
        </repository>

        <!-- CommandAPI Repository -->
        <!-- Vault Repository -->
        <!-- NoteBlockAPI Repository -->
        <repository>
            <id>jitpack.io</id>
            <url>https://jitpack.io</url>
        </repository>

        <!-- QuickShop Repository -->
        <repository>
            <id>quickshop-repo</id>
            <url>https://repo.codemc.io/repository/maven-public/</url>
        </repository>

        <!-- PlaceHolderAPI Repository -->
        <repository>
            <id>placeholderapi</id>
            <url>https://repo.extendedclip.com/content/repositories/placeholderapi/</url>
        </repository>

        <!-- MythicMobs Repository -->
        <repository>
            <id>nexus</id>
            <name>Lumine Releases</name>
            <url>https://mvn.lumine.io/repository/maven-public/</url>
        </repository>

        <!-- ProtocolLib Repository -->
        <repository>
            <id>dmulloy2-repo</id>
            <url>https://repo.dmulloy2.net/repository/public/</url>
        </repository>

        <!-- WorldEdit Repository -->
        <!-- WorldGuard Repository -->
        <repository>
            <id>enginehub-maven</id>
            <url>https://maven.enginehub.org/repo/</url>
        </repository>

        <!-- CoreProtect Repository -->
        <repository>
            <id>playpro-repo</id>
            <url>https://maven.playpro.com</url>
        </repository>
    </repositories>

    <pluginRepositories>
        <pluginRepository>
            <id>maven-snapshots</id>
            <url>https://repository.apache.org/content/repositories/snapshots/</url>
        </pluginRepository>
    </pluginRepositories>

    <dependencies>
        <!-- amethyst (repo:wanyne-amethy) -->
        <dependency>
            <groupId>io.wany.amethyst</groupId>
            <artifactId>Amethyst</artifactId>
            <version>0.8.1</version>
        </dependency>

        <!-- Cucumper Dependency -->
        <dependency>
            <groupId>cucumper</groupId>
            <artifactId>Cucumper</artifactId>
            <version>1.21.5</version>
            <scope>system</scope>
            <systemPath>${project.basedir}/lib/paper-api-1.21.5-R0.1-SNAPSHOT.jar</systemPath>
        </dependency>

        <!-- Paper Dependency -->
        <dependency>
            <groupId>io.papermc.paper</groupId>
            <artifactId>paper-api</artifactId>
            <version>1.21.5-R0.1-SNAPSHOT</version>
            <scope>provided</scope>
        </dependency>

        <!-- NBTAPI Dependency -->
        <dependency>
            <groupId>de.tr7zw</groupId>
            <artifactId>item-nbt-api</artifactId>
            <version>2.14.2-SNAPSHOT</version>
        </dependency>

        <!-- CommandAPI Dependency -->
        <dependency>
            <groupId>dev.jorel</groupId>
            <artifactId>commandapi-bukkit-shade</artifactId>
            <version>10.0.0</version>
        </dependency>

        <!-- Mojang Brigadier Dependency -->
        <dependency>
            <groupId>com.mojang</groupId>
            <artifactId>brigadier</artifactId>
            <version>1.0.18</version>
        </dependency>

        <!-- Vault Dependency -->
        <dependency>
            <groupId>com.github.MilkBowl</groupId>
            <artifactId>VaultAPI</artifactId>
            <version>1.7</version>
            <scope>provided</scope>
        </dependency>

        <!-- NoteBlockAPI Dependency -->
        <dependency>
            <groupId>com.github.koca2000</groupId>
            <artifactId>NoteBlockAPI</artifactId>
            <version>1.6.3</version>
            <scope>provided</scope>
        </dependency>

        <!-- QuickShop Dependency -->
        <dependency>
            <groupId>org.maxgamer</groupId>
            <artifactId>QuickShop</artifactId>
            <version>5.1.2.5</version>
            <scope>provided</scope>
        </dependency>

        <!-- PlaceHolderAPI Dependency -->
        <dependency>
            <groupId>me.clip</groupId>
            <artifactId>placeholderapi</artifactId>
            <version>2.11.6</version>
            <scope>provided</scope>
        </dependency>

        <!-- MythicMobs Dependency -->
        <dependency>
            <groupId>io.lumine</groupId>
            <artifactId>Mythic-Dist</artifactId>
            <version>5.7.2</version>
            <scope>provided</scope>
        </dependency>

        <!-- ProtocolLib Dependency -->
        <dependency>
            <groupId>com.comphenix.protocol</groupId>
            <artifactId>ProtocolLib</artifactId>
            <version>5.3.0-SNAPSHOT</version>
            <scope>provided</scope>
        </dependency>

        <!-- WorldEdit Dependency -->
        <dependency>
            <groupId>com.sk89q.worldedit</groupId>
            <artifactId>worldedit-bukkit</artifactId>
            <version>7.3.9</version>
            <scope>provided</scope>
        </dependency>

        <!-- WorldGuard Dependency -->
        <dependency>
            <groupId>com.sk89q.worldguard</groupId>
            <artifactId>worldguard-bukkit</artifactId>
            <version>7.0.12</version>
            <scope>provided</scope>
        </dependency>

        <!-- GSit Dependency -->
        <dependency>
            <groupId>dev.geco</groupId>
            <artifactId>GSit</artifactId>
            <version>1.5.0</version>
            <scope>provided</scope>
        </dependency>

        <!-- mcMMO Dependency -->
        <dependency>
            <groupId>com.gmail.nossr50</groupId>
            <artifactId>mcMMO</artifactId>
            <version>2.1.221</version>
            <scope>provided</scope>
        </dependency>

        <!-- UltimateTimber Dependency -->
        <dependency>
            <groupId>com.songoda</groupId>
            <artifactId>UltimateTimber</artifactId>
            <version>2.3.5</version>
            <scope>provided</scope>
        </dependency>

        <!-- CoreProtect Dependency -->
        <dependency>
            <groupId>net.coreprotect</groupId>
            <artifactId>coreprotect</artifactId>
            <version>22.4</version>
            <scope>provided</scope>
        </dependency>
    </dependencies>

    <build>
        <plugins>
            <plugin>
                <groupId>org.apache.maven.plugins</groupId>
                <artifactId>maven-jar-plugin</artifactId>
                <version>3.4.1</version>
                <configuration>
                    <archive>
                        <manifest>
                            <addClasspath>true</addClasspath>
                            <classpathPrefix>lib</classpathPrefix>
                            <mainClass>
                                com.jho5245.cucumbery.Cucumbery
                            </mainClass>
                        </manifest>
                    </archive>
<!--                    <outputDirectory>G:\CucumberyAutoUpdater</outputDirectory>-->
                    <outputDirectory>G:\느아아ㅏㅏ아아ㅏ앙ㄺ\게임\마인크래프트\기타 자료\서버\페이퍼 1.21.5 테스트 서버\plugins</outputDirectory>
                </configuration>
            </plugin>
            <plugin>
                <groupId>org.apache.maven.plugins</groupId>
                <artifactId>maven-shade-plugin</artifactId>
                <version>3.5.3</version>
                <executions>
                    <execution>
                        <id>shade</id>
                        <phase>package</phase>
                        <goals>
                            <goal>shade</goal>
                        </goals>
                    </execution>
                </executions>
                <configuration>
                    <relocations>
                        <relocation>
                            <pattern>de.tr7zw.changeme.nbtapi</pattern>
                            <shadedPattern>com.jho5245.cucumbery.util.shading</shadedPattern>
                        </relocation>
                        <relocation>
                            <pattern>dev.jorel.commandapi</pattern>
                            <shadedPattern>com.jho5245.cucumbery.util.shading</shadedPattern>
                        </relocation>
                        <relocation>
                            <pattern>io.wany.amethyst</pattern>
                        </relocation>
                    </relocations>
                    <transformers>
                        <transformer implementation="org.apache.maven.plugins.shade.resource.AppendingTransformer">
                            <resource>LICENSE</resource>
                        </transformer>
                    </transformers>
                </configuration>
            </plugin>
            <plugin>
                <groupId>org.apache.maven.plugins</groupId>
                <artifactId>maven-compiler-plugin</artifactId>
                <configuration>
                    <source>21</source>
                    <target>21</target>
                </configuration>
            </plugin>
        </plugins>
    </build>
</project>